--- a/blocks/card/__title/card__title.css
+++ b/blocks/card/__title/card__title.css
@@ -1,4 +1,4 @@
-.element__title {
+.card__title {
   margin: 0 auto;
   margin-top: 25px;
   margin-left: 21px;
@@ -13,13 +13,13 @@
 }
 
 @media screen and (max-width: 950px) {
-  .element__title {
+  .card__title {
     max-width: 150px;
   }
 }
 
 @media screen and (max-width: 720px) {
-  .element__title {
+  .card__title {
     max-width: 210px;
   }
 }
