--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,4 @@
-.element__like-button{
+.card__like-button{
   background: none;
   border: none;
   box-shadow: none;
@@ -11,6 +11,6 @@
   background-image: url(../../../images/disabled.svg);
 }
 
-.element__like-button:hover {
+.card__like-button:hover {
   opacity: 0.5;
 }
