--- a/blocks/card/card.css
+++ b/blocks/card/card.css
@@ -1,4 +1,4 @@
-.element{
+.card{
   display: flex;
   flex-direction: column;
   position: relative;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 720px) {
-  .element {
+  .card {
     max-width: 282px;
     margin: auto;
   }
