--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,4 +1,4 @@
-.elements {
+.cards {
   margin: 0 auto;
   margin-top: 51px;
   display: grid;
@@ -8,7 +8,7 @@
 }
 
 @media screen and (max-width: 720px) {
-  .elements {
+  .cards {
     margin-top: 36px;
     display: flex;
     flex-direction: column;
